Add database support for Meals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="ingredients_header">Ingredients</string>
     <string name="instructions_header">Instructions</string>
     <string name="cuisine_header">Cuisine</string>
+    <string name="favorite_content_description">Favorite</string>
 </resources>
