Saved meals title fix and add to readme file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Simple Recipes</string>
     <string name="home">Home</string>
+    <string name="saved_recipes">Saved Recipes</string>
     <string name="back">Back</string>
     <string name="recipe_image_content_description">Recipe Image</string>
     <string name="ingredients_header">Ingredients</string>
